--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   uuid: ^4.5.2
   fl_chart: ^1.1.1
   google_fonts: ^7.0.2
+  share_plus: ^12.0.1
+  path_provider: ^2.1.5
+  csv: ^6.0.0
 
 dev_dependencies:
   flutter_test:
